make fb app setting configurable.

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -76,7 +76,7 @@
     <script>
       window.fbAsyncInit = function() {
         FB.init({
-          appId      : '277432858998638', // App ID
+          appId      : '<%= fbAppId %>', // App ID
           status     : true, // check login status
           cookie     : true // enable cookies to allow the server to access the session
         });
