--- a/client/static/index.html
+++ b/client/static/index.html
@@ -2,7 +2,7 @@
 <html manifest="" lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title>D</title>
+    <title>Draw with friends</title>
     <style type="text/css">
         /**
          * Example of an initial loading indicator.
